[package]
name = "random-access-memory"
version = "2.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/random-access-memory"
documentation = "https://docs.rs/random-access-memory"
description = "Continuously read,write to memory using random offsets and lengths"
authors = ["datrs <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.26"
random-access-storage = "4.0.0"
futures = "0.3.4"
async-trait = "0.1.24"

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
async-std = { version = "1.5.0", features = ["attributes"] }
