[package]
name = "random-access-memory"
version = "3.0.0-beta.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/random-access-memory"
documentation = "https://docs.rs/random-access-memory"
description = "Continuously read and write to memory using random offsets and lengths"
authors = ["datrs <yoshuawuyts@gmail.com>", "Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]
readme = "README.md"
edition = "2021"

[dependencies]
random-access-storage = { git = "https://github.com/ttiurani/random-access-storage" , branch = "thiserror"}
async-trait = "0.1.63"
intmap = "2.0.0"

[dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.2.0"
async-std = { version = "1.12.0", features = ["attributes"] }
criterion = "0.4"

[[bench]]
name = "sync"
harness = false
